--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     color: black;
-    background: purple;
+    background: blue;
     margin: 0px;
     padding: 0px;
     font-family: Cursive;
